[package]
name = "nalgebra-lapack"
version = "0.1.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
description = "linear algebra operations for nalgebra matrices using LAPACK"
license = "MIT"
repository = "https://github.com/strawlab/nalgebra-lapack"
documentation = "https://strawlab.github.io/nalgebra-lapack"
readme = "README.md"
keywords = [ "linear-algebra", "matrix", "lapack", "math" ]

[features]
default = ["openblas"]
openblas = ["lapack/openblas"]
netlib = ["lapack/netlib"]
accelerate = ["lapack/accelerate"]

[dependencies]
nalgebra = "0.3.1"
num = "0.1"

[dependencies.lapack]
version = "0.8"
default-features = false
